<resources>
    <string name="app_name">Officina</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_name">Nome</string>
    <string name="label_surname">Cognome</string>
    <string name="label_email">Email</string>
    <string name="btn_add_label">Aggiungi</string>
    <string name="hint_name">Nome o Cognome</string>
    <string name="delete_button_label">Elimina</string>
    <string name="title_activity_person_detail_host">PersonDetailHostActivity</string>
    <string name="title_person_list">People</string>
    <string name="title_person_detail">Person Detail</string>
    <string name="label_targa">Targa</string>
    <string name="label_telaio">Telaio</string>
    <string name="label_model">Modello</string>
    <string name="label_description">Descrizione</string>
    <string name="label_customers">Cliente</string>
    <string name="label_hours">Ore impiegate</string>
    <string name="label_datastart">Data d\'inizio</string>
    <string name="label_datafinish">Data di fine</string>
</resources>