<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".InterventiViewSingoloActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/name_label"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/label_name"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/info_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:gravity="end"
            android:text="@string/label_name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/targa_label"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/label_targa"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/info_targa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:gravity="end"
            android:text="@string/label_targa"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/hours_label"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/label_hours"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/info_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:gravity="end"
            android:text="@string/label_hours"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/datastart_label"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/label_datastart"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/info_datastart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:gravity="end"
            android:text="@string/label_datastart"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/datafinish_label"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/label_datafinish"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/info_datafinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:gravity="end"
            android:text="@string/label_datafinish"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="20">

        <TextView
            android:id="@+id/description_label"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/label_description"/>

        <TextView
            android:id="@+id/info_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="24sp"
            android:text="@string/label_description"/>

    </LinearLayout>

</LinearLayout>