<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AutoViewSingoloActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/targa_label"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/label_targa"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/info_targa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:gravity="end"
            android:text="@string/label_targa"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/telaio_label"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/label_telaio"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/info_telaio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:gravity="end"
            android:text="@string/label_telaio"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/model_label"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/label_model"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/info_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:gravity="end"
            android:text="@string/label_model"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/customers_label"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/label_customers"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/info_customers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:gravity="end"
            android:text="@string/label_customers"/>

    </LinearLayout>

</LinearLayout>